# SoulScraper

./: .gitignore  Cargo.toml  README.md  README_en.md  test_batch_url.txt
src/: agents.rs  batch.rs  data_model.rs  extractor.rs  graph_quality.rs  io_src.rs  lib.rs  main.rs  questioner.rs  scraper.rs  tools.rs  util.rs
src/agents/: extractor_agent.rs  questioner_agent.rs  scraper_agent.rs
src/data_model/: extractor.rs  retrieve_question.rs  soul_mem.rs
src/data_model/questioner/: retrieve.rs
src/data_model/soul_mem/: proc.rs  sem.rs  sit.rs
src/prompt_template/: extractor_edge_system  extractor_fix_system  extractor_node_system  extractor_system  scraper_system
src/prompt_template/questioner/: retrieve_system
src/questioner/: retrieve.rs
src/tools/: web_fetch.rs
tests/: test_diag.rs
